tests/fail/function_call_invalid_argument_types.tig
substring(1, "a", nil)
