tests/fail/function_call_invalid_argument_types.err
Semantic Error: Invalid type of the argument #1 of the function substring at line 1.
Semantic Error: Invalid type of the argument #2 of the function substring at line 1.
Semantic Error: Invalid type of the argument #3 of the function substring at line 1.
